<resources>
    <string name="app_name">爱学习</string>

    <string name="video">视频</string>
    <string name="video_view_player">ViewView</string>
    <string name="video_exo_player">ExoPlayer</string>
    <string name="video_media_player">MediaPlayer</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="orientation">横竖屏切换</string>

    <string name="wifi_direct_search">WIFI直连搜索</string>

    <string name="bluetooth">蓝牙</string>
    <string name="bluetooth_search">普通蓝牙搜索</string>
    <string name="bluetooth_ble_search">低功耗蓝牙搜索</string>


    <string name="sms">短信</string>


    <string name="loading">加载中...</string>
</resources>
