<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/main_video"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:textSize="@dimen/sp_16"
        android:layout_margin="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:gravity="center"
        android:background="@drawable/selector_item_cccccc"
        android:text="@string/video"/>


    <TextView
        android:id="@+id/main_wifi"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:textSize="@dimen/sp_16"
        android:layout_margin="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:gravity="center"
        android:background="@drawable/selector_item_cccccc"
        android:text="@string/wifi_direct_search"/>

    <TextView
        android:id="@+id/main_sms"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:textSize="@dimen/sp_16"
        android:layout_margin="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:gravity="center"
        android:background="@drawable/selector_item_cccccc"
        android:text="@string/sms"/>

</LinearLayout>